Preventing text re-wrapping when the element is not focused

--- a/themes/shell/styles/components/_forms.scss
+++ b/themes/shell/styles/components/_forms.scss
@@ -75,7 +75,7 @@
         }
 
         &:not(:focus){
-          padding: .75em 0;
+          padding: .75em 1em .75em 0;
           transition: padding .1s ease-in-out;
         }
 
